compiler/testData/diagnostics/tests/UnderscoreUsageInAnnotation.kt
// FIR_IDENTICAL
package test

annotation class `__`(konst konstue: String)

@<!UNDERSCORE_USAGE_WITHOUT_BACKTICKS!>__<!>("") class TestAnn
@`__`("") class TestAnn2